--- a/home.css
+++ b/home.css
@@ -34,6 +34,8 @@ body {
     align-items: center;
 }
 
-.Logo-text{
-
+.Logo-text img {
+    width: 600px; /* 이미지 크기 증가 */
+    height: auto;
+    margin-top: 120px;
 }
